syntax = "proto3";

import "google/api/annotations.proto";

package sum;

option go_package = "sum/sumpb";

message SumRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message SumResponse {
  int32 result = 1;
}

service SumService{
  //unary
  rpc Sum(SumRequest) returns(SumResponse){
    option (google.api.http) = {
      post: "/sum"
      body: "*"
    };
  }
}
